fixed z-index of toast container

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import "~antd/dist/antd.css";
 
-.css-1jgv6z-ToastContainer {
+.react-toast-notifications__container {
   z-index: 1001 !important;
 }
 .App {
